# aptos-rs-sdk

./: Cargo.toml  README.md
graphql/: schema.graphql
src/: aptos_client.rs  aptos_client_config.rs  const.rs  errors.rs  lib.rs  main.rs  pagination_filter.rs
src/queries/: get_events.rs  mod.rs  typ.rs
