[package]
name = "aptos-rs-sdk"
version = "0.1.0"
edition = "2021"
autoexamples = true
autotests = true
autobenches = true

[dependencies]
graphql_client = { version = "0.14.0", features = ["reqwest-blocking"] }
anyhow = "1.0"
serde = "^1.0"
reqwest = { version = "0.12.5", features = ["json", "blocking"] }
tokio = { version = "1.39.1", features = ["rt", "rt-multi-thread", "macros"] }
serde_json = { version = "1.0", features = ["raw_value"] }
thiserror = "1.0.63"

[dev-dependencies]
prettytable-rs = "0.10.0"
clap = { version = "4.5.10", features = ["derive"] }
log = "^0.4"
env_logger = "0.11.4"