[package]
name = "aptos-rs-sdk"
version = "0.1.0"
edition = "2021"
autoexamples = true
autotests = true
autobenches = true

[dependencies]
graphql_client = { version = "0.14.0", features = ["reqwest-blocking"] }
anyhow = { version = "1.0.86" }
serde = { version = "1.0.204" }
reqwest = { version = "0.12.5", features = ["json", "blocking"] }
tokio = { version = "1.39.1", features = ["rt", "rt-multi-thread", "macros"] }
serde_json = { version = "1.0.120", features = ["raw_value"] }
thiserror = { version = "1.0.63" }
aptos-api-types = { git = "https://github.com/aptos-labs/aptos-core", package = "aptos-api-types" }
move-core-types = { git = "https://github.com/aptos-labs/aptos-core", package = "move-core-types" }

[patch.crates-io]
merlin = { git = "https://github.com/aptos-labs/merlin" }
x25519-dalek = { git = "https://github.com/Tranduy1dol/x25519-dalek", branch = "zeroize_v1.7" }